<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@drawable/background">

    <Button
        android:id="@+id/loginR"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:text="@string/loginR"
        android:textColor="@android:color/white"
        android:background="@drawable/button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerR"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerR"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:text="@string/registerR"
        android:textColor="@android:color/white"
        android:background="@drawable/button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginR" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/appSlogan"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/appSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:textColor="@android:color/white"
        android:text="@string/appSlogan"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/loginR"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>