<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/registerTitle"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@null"
        android:tint="@color/buttonColor"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/registerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/registerTitle"
        app:srcCompat="@drawable/ic_back" />

    <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/box_back"
            android:hint="@string/userName"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/registerTitle" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" android:inputType="" android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/box_back"
            android:hint="@string/email"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" android:inputType="textEmailAddress" android:importantForAutofill="no"
            tools:targetApi="o" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/username"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/box_back"
            android:hint="@string/password"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" android:inputType="textPassword" android:importantForAutofill="no"
            tools:targetApi="o" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/email"/>

    <EditText
            android:id="@+id/passwordAgain"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/box_back"
            android:hint="@string/passwordAgain"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" android:inputType="textPassword" android:importantForAutofill="no"
            tools:targetApi="o" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/password"/>

    <Button
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/register"
            android:background="@drawable/button_back"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>