<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingEnd="121dp"
            android:paddingStart="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@drawable/box_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toTopOf="@+id/login" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.5"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:paddingStart="5dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:background="@drawable/box_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="RtlSymmetry"
            tools:targetApi="o" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            android:layout_marginStart="30dp" android:layout_marginEnd="30dp"/>

    <Button
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:maxWidth="120dp"
            android:background="@drawable/box_back"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/forgot"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/email"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintTop_toTopOf="@+id/email"/>

    <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="100dp"
            android:text="@string/login"
            android:background="@drawable/button_back"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>