<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".activities.MainActivity"
        android:background="@drawable/background" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:inputType="textPersonName"
                    android:hint="@string/title"
                    android:background="@drawable/box_back"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:ems="10"
                    android:maxLength="30"
                    android:gravity="center"
                    android:id="@+id/title" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="40dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="40dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toTopOf="parent" android:importantForAutofill="no" tools:targetApi="o"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:inputType="textPersonName"
                    android:hint="@string/explanation"
                    android:background="@drawable/box_back"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:ems="10"
                    android:gravity="center"
                    android:id="@+id/explanation" app:layout_constraintEnd_toEndOf="@+id/title"
                    app:layout_constraintStart_toStartOf="@+id/title"
                    android:layout_marginTop="16dp"
                    android:importantForAutofill="no" tools:targetApi="o"
                    app:layout_constraintTop_toBottomOf="@+id/title"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/explanation"
                    app:layout_constraintEnd_toEndOf="@+id/explanation"
                    app:layout_constraintStart_toStartOf="@+id/explanation" android:id="@+id/addingEventRec"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:inputType="textPersonName"
                    android:hint="@string/clubHome"
                    android:background="@drawable/box_back"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:ems="10"
                    android:gravity="center"
                    android:id="@+id/clubHome"
                    app:layout_constraintStart_toStartOf="@+id/explanation"
                    android:layout_marginTop="32dp"
                    android:importantForAutofill="no" tools:targetApi="o"
                    app:layout_constraintTop_toBottomOf="@+id/addingEventRec"
            />

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:inputType="textPersonName"
                    android:hint="@string/clubAway"
                    android:background="@drawable/box_back"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:ems="10"
                    android:gravity="center"
                    android:id="@+id/clubAway" app:layout_constraintEnd_toEndOf="@+id/clubHome"
                    app:layout_constraintStart_toStartOf="@+id/clubHome"
                    android:layout_marginTop="24dp"
                    android:importantForAutofill="no" tools:targetApi="o"
                    app:layout_constraintTop_toBottomOf="@+id/clubHome" app:layout_constraintHorizontal_bias="0.0"
            />

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:inputType="textPersonName"
                    android:hint="@string/type"
                    android:background="@drawable/box_back"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:ems="10"
                    android:gravity="center"
                    android:id="@+id/type"
                    android:importantForAutofill="no" tools:targetApi="o"
                    app:layout_constraintBottom_toBottomOf="@+id/clubHome"
                    app:layout_constraintTop_toTopOf="@+id/clubHome"
                    app:layout_constraintEnd_toEndOf="@+id/explanation"
                    app:layout_constraintStart_toEndOf="@+id/clubHome"
                    android:layout_marginStart="16dp" android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="1.0"/>

            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:id="@+id/trust"
                    android:background="@drawable/box_back"
                    android:textAlignment="center"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="@+id/clubAway"
                    app:layout_constraintBottom_toBottomOf="@+id/clubAway"
                    app:layout_constraintStart_toStartOf="@+id/type" app:layout_constraintEnd_toEndOf="@+id/type"/>

            <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp" app:srcCompat="@drawable/ic_plus"
                    android:id="@+id/addEvent"
                    android:background="@null"
                    android:contentDescription="@string/addEvent"
                    android:layout_marginBottom="50dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:scaleType="fitXY"
                    app:layout_constraintHorizontal_bias="0.498"
                    android:layout_marginTop="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/clubAway"
                    app:layout_constraintBottom_toTopOf="@+id/publish"/>

            <Button
                    android:text="@string/publish"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/publish"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_back"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="40dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="40dp" android:layout_marginBottom="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>